crates/bitnet-kernels/tests/snapshots/opencl_snapshot_tests__kernel_sources__elementwise_kernel_source.snap
---
source: crates/bitnet-kernels/tests/opencl_snapshot_tests.rs
expression: src.source
---
__kernel void add(
    __global const float* a, __global const float* b,
    __global float* c, const int n)
{
    int i = get_global_id(0);
    if (i < n) c[i] = a[i] + b[i];
}

__kernel void mul(
    __global const float* a, __global const float* b,
    __global float* c, const int n)
{
    int i = get_global_id(0);
    if (i < n) c[i] = a[i] * b[i];
}

__kernel void silu(
    __global const float* x, __global float* y,
    const int n)
{
    int i = get_global_id(0);
    if (i < n) y[i] = x[i] / (1.0f + exp(-x[i]));
}

__kernel void gelu(
    __global const float* x, __global float* y,
    const int n)
{
    int i = get_global_id(0);
    if (i < n) {
        float v = x[i];
        float cdf = 0.5f * (1.0f + tanh(
            0.7978845608f * (v + 0.044715f * v * v * v)));
        y[i] = v * cdf;
    }
}
