crates/bitnet-kernels/tests/snapshots/opencl_snapshot_tests__kernel_sources__matmul_kernel_source.snap
---
source: crates/bitnet-kernels/tests/opencl_snapshot_tests.rs
expression: src.source
---
__kernel void matmul_naive(
    __global const float* A, __global const float* B,
    __global float* C,
    const int M, const int N, const int K,
    const float alpha, const float beta)
{
    int row = get_global_id(0);
    int col = get_global_id(1);
    if (row < M && col < N) {
        float sum = 0.0f;
        for (int k = 0; k < K; k++) {
            sum += A[row * K + k] * B[k * N + col];
        }
        C[row * N + col] = alpha * sum + beta * C[row * N + col];
    }
}
