crates/bitnet-kernels/tests/snapshots/opencl_snapshot_tests__kernel_sources__matmul_tiled_kernel_source.snap
---
source: crates/bitnet-kernels/tests/opencl_snapshot_tests.rs
expression: src.source
---
#ifndef TILE_SIZE
#define TILE_SIZE 16
#endif

__kernel void matmul_tiled(
    __global const float* A, __global const float* B,
    __global float* C,
    const int M, const int N, const int K)
{
    __local float As[TILE_SIZE][TILE_SIZE];
    __local float Bs[TILE_SIZE][TILE_SIZE];
    int bx = get_group_id(1), by = get_group_id(0);
    int tx = get_local_id(1), ty = get_local_id(0);
    int row = by * TILE_SIZE + ty;
    int col = bx * TILE_SIZE + tx;
    float sum = 0.0f;
    for (int t = 0; t < (K + TILE_SIZE - 1) / TILE_SIZE; t++) {
        int k_idx = t * TILE_SIZE;
        As[ty][tx] = (row < M && k_idx + tx < K)
            ? A[row * K + k_idx + tx] : 0.0f;
        Bs[ty][tx] = (k_idx + ty < K && col < N)
            ? B[(k_idx + ty) * N + col] : 0.0f;
        barrier(CLK_LOCAL_MEM_FENCE);
        for (int k = 0; k < TILE_SIZE; k++)
            sum += As[ty][k] * Bs[k][tx];
        barrier(CLK_LOCAL_MEM_FENCE);
    }
    if (row < M && col < N) C[row * N + col] = sum;
}
