crates/bitnet-kernels/tests/snapshots/opencl_snapshot_tests__kernel_sources__registry_kernel_count.snap
---
source: crates/bitnet-kernels/tests/opencl_snapshot_tests.rs
expression: "format!(\"kernel_count={}\", reg.len())"
---
kernel_count=10
